<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DangKyActivity" android:background="@color/colorPrimary">

    <EditText
            android:layout_width="0dp"
            android:layout_height="@dimen/size54dp"
            android:drawablePadding="@dimen/size10dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtTenDNDK" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:drawableLeft="@drawable/user" android:background="@color/colorWhite"
            android:hint="@string/username"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="@dimen/size54dp"
            android:drawablePadding="@dimen/size10dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edtMatKhau" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="32dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/edtTenDNDK"
            android:drawableLeft="@drawable/password"
            android:background="@color/colorWhite" android:hint="@string/password"/>
    <EditText

            android:layout_width="0dp"
            android:layout_height="@dimen/size54dp"
            android:drawablePadding="@dimen/size10dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtNgaySinh" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/rgGioiTinh" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="32dp"
            android:drawableLeft="@android:drawable/ic_menu_my_calendar" android:background="@color/colorWhite"
            android:hint="@string/birthday"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="@dimen/size54dp"
            android:drawablePadding="@dimen/size10dp"
            android:inputType="number"
            android:maxLength="12"
            android:id="@+id/edtCMND" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/edtNgaySinh" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="32dp"
            android:drawableLeft="@drawable/idcard" android:background="@color/colorWhite" android:hint="@string/cmnd"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edtMatKhau"
            android:id="@+id/rgGioiTinh"
            app:layout_constraintStart_toStartOf="@+id/edtMatKhau"
    >

        <RadioButton
            android:id="@+id/rbNam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nam"
            android:textColor="@color/colorWhite"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/rbNu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nu"
            android:textColor="@color/colorWhite"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>
    <TextView
            android:text="@string/dangky"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:textSize="26dp"
            android:textColor="@color/colorWhite" android:textStyle="bold"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"/>
    <Button
            android:text="@string/dongy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnDongY" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/edtCMND" app:layout_constraintStart_toStartOf="@+id/edtCMND"
            app:layout_constraintEnd_toStartOf="@+id/guideline" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:background="@color/colorGreenButton"
            style="@style/Widget.AppCompat.Button.Borderless" android:onClick="onClickedBtnDongY"/>
    <Button
            android:text="@string/thoat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnThoat"
            app:layout_constraintTop_toTopOf="@+id/btnDongY" app:layout_constraintEnd_toEndOf="@+id/edtCMND"
            app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:background="@color/colorOrganeButton"
            style="@style/Widget.AppCompat.Button.Borderless" android:onClick="onClickedBtnThoat"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline"
                                          android:orientation="vertical"
                                          app:layout_constraintGuide_percent="0.5"/>
</android.support.constraint.ConstraintLayout>