<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DangNhapActivity">

    <ImageView
            android:layout_width="120dp"
            android:layout_height="103dp" app:srcCompat="@drawable/logodangnhap"
            android:id="@+id/imageView" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="@dimen/size54dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:drawablePadding="@dimen/size10dp"
            android:id="@+id/edtUserNameDN" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:drawableLeft="@drawable/user" android:hint="@string/username"
            android:background="@color/colorWhite"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="@dimen/size54dp"
            android:inputType="textPassword"
            android:ems="10"
            android:drawablePadding="@dimen/size10dp"
            android:id="@+id/edtPasswordDN" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edtUserNameDN"
            android:drawableLeft="@drawable/password" android:hint="@string/password"
            app:layout_constraintStart_toStartOf="@+id/edtUserNameDN"
            app:layout_constraintEnd_toEndOf="@+id/edtUserNameDN" android:background="@color/colorWhite"/>
    <TextView
            android:text="@string/dangnhap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:layout_marginTop="64dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:textSize="30sp"
            android:textStyle="bold"/>
    <Button
            android:text="@string/dongy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnDongYDN" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edtPasswordDN"
            app:layout_constraintStart_toStartOf="@+id/edtPasswordDN"
            app:layout_constraintEnd_toEndOf="@+id/edtPasswordDN" style="@style/Widget.AppCompat.Button.Borderless"
            android:background="@color/colorAccent" android:onClick="onClickedBtnDongYDN"/>
    <Button
            android:text="@string/dangky"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnDangKyDN" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnDongYDN"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="@color/colorPrimary" android:onClick="onClickedBtnDangKyDN"
            app:layout_constraintStart_toStartOf="@+id/edtPasswordDN"
            app:layout_constraintEnd_toEndOf="@+id/edtPasswordDN"/>

</android.support.constraint.ConstraintLayout>